[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py_to_proto"
version = "0.5.2"
dependencies = [
    # NOTE: protobuf 3.19 is the highest version allowed by tensorflow (currently),
    #   so we explicitly pin the lower bound to allow compatibility with tf
    "protobuf>=3.19.0,<5",
    "alchemy-logging>=1.0.3",
    "typing-extensions>=4.5.0,<5; python_version < '3.9'",
]
requires-python = ">=3.8"
authors = [
    {name = "Gabe Goodhart", email = "gabe.l.hart@gmail.com"},
]
description = "A tool to dynamically create protobuf message classes from python data schemas"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["json", "json typedef", "jtd", "protobuf", "proto", "dataclass"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/IBM/py-to-proto"
